--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,10 @@
 {
-  "development": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  }
+    "development": {
+        "username": "sesac",
+        "password": "1234",
+        "database": "testproject",
+        "host": "127.0.0.1",
+        "dialect": "mysql",
+        "config": "+09:00"
+    }
 }
