Feat: 건의사항 글쓰기 - SunEditor 적용

--- a/config/config.json
+++ b/config/config.json
@@ -5,6 +5,6 @@
         "database": "testproject",
         "host": "127.0.0.1",
         "dialect": "mysql",
-        "config": "+09:00"
+        "timezone": "+09:00"
     }
 }
