--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
     "development": {
         "username": "sesac",
         "password": "1234",
-        "database": "testproject",
+        "database": "CMM",
         "host": "127.0.0.1",
         "dialect": "mysql",
         "timezone": "+09:00"
