--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "express-session": "^1.18.0",
         "mysql": "^2.18.1",
         "mysql2": "^3.9.1",
+        "nodemailer": "^6.9.11",
         "sequelize": "^6.37.1",
         "sequelize-cli": "^6.6.2"
     }
