--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=8080
 EMAIL_SERVICE="naver"
-USER_EMAIL=kanghyein0310@naver.com
-USER_PASSWORD=Sesac1122
+USER_EMAIL="kanghyein0310@naver.com"
+USER_PASSWORD="Sesac1122"
